# proxyapp_sros

./: CMakeLists.txt  Dockerfile  README.md  build.sh  package.xml
.github/workflows/: main.yaml
include/proxyapp/: ProxyAppParticipant.hpp  ProxyAppParticipant_impl.hpp
packaging/: build.sh  package.sh
packaging/debian/: control  postinst  prerm
proxyapp_py_ros2/: Dockerfile  build.sh  package.xml  setup.cfg  setup.py
proxyapp_py_ros2/packaging/: build.sh
proxyapp_py_ros2/packaging/debian/: control  postinst  prerm
proxyapp_py_ros2/proxyapp_py_ros2/: secure_server.py  unsecure_client.py
proxyapp_py_ros2/systemd/: proxyapp_py_secure_srv.service  proxyapp_py_unsecure_client.service
src/: ProxyApp_ros.cpp  node_thread.cpp  node_thread.hpp
src/cpp/: ProxyApp_main.cpp
systemd/: proxyapp.service
tools/: CMakeLists.txt  package.xml
tools/include/drone_srv_server_client/: dummy_service_client.hpp  dummy_service_server.hpp
tools/src/: dummy_service_client.cpp  dummy_service_server.cpp  main.cpp
types/DroneCoordinates/: DroneCoordinates.cxx  DroneCoordinates.h  DroneCoordinates.idl  DroneCoordinatesPubSubTypes.cxx  DroneCoordinatesPubSubTypes.h  Point.cxx  Point.h
types/fog_msgs/: Vec4.cxx  Vec4.h  Vec4.idl  Vec4PubSubTypes.cxx  Vec4PubSubTypes.h  Vec4_Request.cxx  Vec4_Request.h  Vec4_Request.idl  Vec4_RequestPubSubTypes.cxx  Vec4_RequestPubSubTypes.h  Vec4_Response.cxx  Vec4_Response.h  Vec4_Response.idl  Vec4_ResponsePubSubTypes.cxx  Vec4_ResponsePubSubTypes.h
